--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "csv-parser": "^3.0.0"
-  }
+  "express": "^4.18.2",
+  "csv-parser": "^3.0.0",
+  "multer": "^1.4.5"
+}
 }
