--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.7",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
+    "ibm-watson": "^9.1.0",
     "multer": "^1.4.5-lts.1"
   }
 }
